app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

* {
	margin: 0;
	padding: 0;
}

body {
	display: grid;
	grid-template-rows: 1fr 6fr 0.5fr;
	background-color: #EAE2B7;
	color: #003049;
}

#banner {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
	box-shadow: 1px 1px 5px 2px #003049;
	padding: 0.5rem;
	background-color: #003049;
	border-bottom: 1px solid #EAE2B7;
	color: #EBF8FF;
	z-index: 1;
}

#siteName {
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	font-size: 4.5rem;
	letter-spacing: 5px;
	text-shadow: 2px 2px #000000;
}

#siteName a {
	text-decoration: none;
	color: #FFF;
}

#sloganNewArtCont {
	flex: 2;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	gap: 10px;
}

#newArticleLink {
	align-self: flex-end;
	padding: 1rem;
}

#newArticleLink a {
	font-size: 1.5rem;
	text-decoration: none;
	color: #FCBF49;
	padding: 10px 10px 5px 10px;
	border-radius: 10px;
	border: 1px solid #FFFFFF;
	transition: background-color 0.3s, color 0.3s;
}

#newArticleLink a:hover {
	background-color: #FCBF49;
	color: #003049;
}

#slogan {
	align-self: flex-end;
	font-size: 1.5rem;
	letter-spacing: 6px;
	text-align: center;
}

#footer {
	background-color: #003049;
	color: #EBF8FF;
	font-size: 1.2rem;
	display: flex;
	align-items: center;
	justify-content: center;
	border-top: 2px solid black;
	letter-spacing: 3px;
}

